# taxan

./: .gitignore  CLAUDE.md  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
.claude/agents/: tasks.md
docs/: MODELS.md  OVERVIEW.md  ROADMAP.md
tasks/: 001-create-app.md  002-initial-model-setup.md  003-add-accounting-year.md  004-project-structure.md  005-rest-framework.md  006-add-rest-routes.md  007-add-drf-serializers.md  008-update-coding-guidelines.md  009-add-viewsets.md  010-add-created-at.md  011-write-code-overview.md  012-add-transaction-to-event.md  013-upload-attachments.md  014-switch-to-pytest.md  015-add-openapi-schema.md  016-migrate-to-uv.md  017-document-the-rest-api-endpoints.md  018-use-more-specific-viewsets.md  019-use-black-for-formatting.md  020-document-errors.md
taxan/: asgi.py  settings.py  urls.py  wsgi.py
tx/: apps.py  models.py  serializers.py  views.py
tx/migrations/: 0001_initial.py  0002_financialyear_event_financial_year.py  0003_alter_event_financial_year_alter_transaction_account_and_more.py  0004_event_created_at.py  0005_attachment.py  0006_alter_account_code_alter_account_name_and_more.py  0007_alter_event_financial_year.py
tx/tests/: test_attachments.py  test_serializers.py  test_views.py
